# string2shape

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TilingAutoencoder-Debug.files  TilingAutoencoder-Debug.includes  TilingAutoencoder.files  TilingGrammarAutoencoder.py  TilingGrammarAutoencoder.pyproj  TilingGrammarAutoencoder.sln  augment_dataset.py  create_artificial_dataset.py  create_obj_dataset.py  grammar.py  graph_embedding.py  graph_utils_test.py  module_build_cmd.txt  preprocess.py  preprocess_graph.py  sample.py  sample_graph.py  scenes.7z  str_to_file.py  train.py  train_graph.py  train_seq2seq.py
neuralnets/: autoencoder.py  grammar.py  graph_autoencoder.py  seq2seq.py  shape_graph.py  utils.py
obj2string/: Algebra.h  BBox.h  CMakeLists.txt  CollisionDetector.cu  CollisionDetector.h  CollisionGraphExporter.cu  CollisionGraphExporter.h  DebugUtils.h  Graph.cu  Graph.h  Graph2String.cu  Graph2String.h  GraphToWFObject.cu  GraphToWFObject.h  PartOrientationUtils.cu  PartOrientationUtils.h  Primitive.h  RNG.h  SVD.cpp  SVD.h  Timer.h  UniformGrid.h  UniformGridSortBuilder.cu  UniformGridSortBuilder.h  VariationGenerator.h  VariationGenrator.cu  WFObjUtils.cpp  WFObjUtils.cu  WFObjUtils.h  WFObjWriter.cpp  WFObjWriter.h  WFObject.h  WFObjectReader.cpp  WFObjectToString.cpp  WFObjectToString.cu  WFObjectToString.h  Wiggle.cu  Wiggle.h  dllmain.cpp  obj2string.cpp  (+5 more)
tests/: CMakeLists.txt  CollisionTest.h  GraphTest.h  RNGTest.h  ShapeVariationTest.h  UniformGridSortBuilderTest.cpp  UniformGridSortBuilderTest.h  WiggleTest.h  main.cu  tests.vcxproj
